# XMC4800_Simple_SOES_Slave

./: .gitignore  CMakeLists.txt  README.md  XMC4800_Simple_SOES_Slave Configuration.launch  arm_toolchain.cmake  imu.c  imu.h  main.c  objectlist.c  utypes.h
soes/: CMakeLists.txt  ecat_slv.d  ecat_slv.lst  esc.d  esc.lst  esc_coe.d  esc_coe.lst  esc_eep.d  esc_eep.lst
soes/hal/xmc4/: esc_hw.d  esc_hw.lst  esc_hw_eep.c  esc_hw_eep.d  esc_hw_eep.lst
vscode/: c_cpp_properties.json  launch.json
xmclib/: CMakeLists.txt
